# contrast-module-identifier

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: tests.yml
module_identifier/: __init__.py  __main__.py  config.py  declarations.py  discover.py  identify.py  mcp_contrast.py  models.py  pipeline.py  resolver.py  scanner.py
module_identifier/llm/: __init__.py  agent.py  config.py  mcp_tools.py  models.py  providers.py
module_identifier/tests/: test_cli.py  test_config.py  test_declarations.py  test_discover.py  test_fixtures.py  test_golden.py  test_identify.py  test_llm_agent.py  test_llm_config.py  test_llm_mcp_tools.py  test_llm_models.py  test_llm_providers.py  test_main_errors.py  test_mcp_contrast.py  test_models.py  test_pipeline_llm.py  test_resolver.py  test_scanner.py
module_identifier/tests/fixtures/: golden_apps.json
module_identifier/tests/fixtures/fallback-ambiguous/: package.json
module_identifier/tests/fixtures/fallback-no-manifest-name/: package.json
module_identifier/tests/fixtures/go/: go.mod
module_identifier/tests/fixtures/java/: pom.xml
module_identifier/tests/fixtures/jvm-gradle-mixed-dsl/: build.gradle.kts  settings.gradle.kts
module_identifier/tests/fixtures/jvm-maven-gradle-coexist/: pom.xml
module_identifier/tests/fixtures/jvm-maven-nested/: pom.xml
module_identifier/tests/fixtures/monorepo-clean/: settings.gradle.kts
module_identifier/tests/fixtures/monorepo-nasty/: pom.xml
module_identifier/tests/fixtures/node-pnpm-workspace/: package.json
(+28 files in other folders)
