[project]
name = "contrast-module-identifier"
version = "0.1.0"
description = "Deterministic module discovery and Contrast app ID resolution for code repositories"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pydantic-ai[openai,anthropic,bedrock,vertexai,mcp]>=1.33.0",
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["module_identifier*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
